[tool.poetry]
name = "pyrpgtables"
version = "0.1.0"
description = "Python module to support quickly reading and rolling with TTRPG random tables"
authors = ["Alex Davis <8m3xlt@gmail.com>"]
license = "MIT License"
readme = "README.md"
packages = [{include = "pyrpgtables"}]

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
